# Pharma

./: .gitignore  .replit  CONTRIBUTING.md  LICENSE  MAJOR PROJECT_PPT.pptx  Procfile  README.md  START_PROJECT.bat  ai_chatbot.py  ai_models.py  app.py  database.py  drug_interactions.py  index.html  inventory_20250903.csv  package-requirements.txt  pharma_backup_20250903_134057.db  pharma_inventory.db  pyproject.toml  receipt_scanner.py  replit.md  requirements.txt  setup_instructions.txt  start_project.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
MediManage/: pharma_inventory.db
attached_assets/: Pasted-Give-me-full-code-for-my-project-ai-based-pharmaceutical-inventory-management-system-with-ai-feature-1756829937537_1756829937538.txt
